<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <ListView
            android:id="@+id/workTimeRecordview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:fastScrollEnabled="true"
            android:scrollingCache="true"
            android:textFilterEnabled="true"></ListView>



    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="right|bottom"
        android:layout_margin="16dp"
        fab:fab_colorNormal="@color/colorPrimary"
        android:src="@drawable/ic_add_white_48px"

        />

</FrameLayout>
